fix paddings across the page for better responsiveness on smaller screens.

--- a/style.css
+++ b/style.css
@@ -1263,7 +1263,7 @@ html {
     justify-content: center;
 }
 .skills-section{
-    padding: 20px;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1314,6 +1314,9 @@ html {
       flex-direction: row-reverse;
       align-items:start;
       position: relative;
+    }
+    #see-more{
+        display: none;
     }
     .project-button {
        display: flex;
@@ -1395,7 +1398,7 @@ html {
         align-items: center;
     }
     .pf-img{
-        width: 80%;
+        width: 75%;
         height: auto;
     }
     .hero-text {
@@ -1410,8 +1413,8 @@ html {
      
     }
     .outer {
-        width: 100%;
-        height: 100%;
+        width: 95%;
+        height: 95%;
     }
     .abt-sub-section {
         display: flex;
